--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
   </head>
   <body>
     <div class="profile-card">
-      <a class="easter-egg" href="https://gwangbu.life" target="_blank">
-        <img src="./src/assets/gwangbu.png" alt="광부앱" class="profile-image" />
-      </a>
+      <!-- <a class="easter-egg" href="https://gwangbu.life" target="_blank"> -->
+      <img src="./src/assets/gwangbu.png" alt="광부앱" class="profile-image" />
+      <!-- </a> -->
       <h1 class="name">이범원</h1>
       <p class="bio">멋쟁이 사자처럼 프론트엔드 부트캠프 14기 이범원 입니다.</p>
       <p>과제 결과는 링크를 선택해주세요.</p>
