--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
   </head>
   <body>
     <div class="profile-card">
-      <!-- <a class="easter-egg" href="https://gwangbu.life" target="_blank"> -->
       <img src="./src/assets/gwangbu.png" alt="광부앱" class="profile-image" />
-      <!-- </a> -->
       <h1 class="name">이범원</h1>
       <p class="bio">멋쟁이 사자처럼 프론트엔드 부트캠프 14기 이범원 입니다.</p>
       <p>과제 결과는 링크를 선택해주세요.</p>
       <ul class="homework-links">
         <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
         <li><a href="./src/md/week1-retrospect.md">1주차 회고</a></li>
+        <li style="flex-basis: 100%; height: 0"></li>
+        <!-- 줄바꿈 요소 -->
         <li><a href="./src/avatars/avatars.html">아바타</a></li>
         <li><a href="./src/md/week2-retrospect.md">2주차 회고</a></li>
       </ul>
