--- a/index.html
+++ b/index.html
@@ -3,79 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML/CSS 과제</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Noto Sans KR', sans-serif;
-        background-color: #f5f5f5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-      }
-
-      .profile-card {
-        background: white;
-        border-radius: 20px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-        padding: 2rem;
-        width: 300px;
-        text-align: center;
-      }
-
-      .profile-image {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        margin-bottom: 1.5rem;
-        object-fit: cover;
-        border: 5px solid #f0f0f0;
-        cursor: pointer;
-        transition: transform 0.3s ease;
-      }
-
-      .name {
-        font-size: 1.5rem;
-        font-weight: bold;
-        color: #333;
-        margin-bottom: 0.5rem;
-      }
-
-      .bio {
-        color: #666;
-        line-height: 1.6;
-        margin-bottom: 1.5rem;
-      }
-
-      .homework-links {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-      }
-
-      .homework-links li {
-        width: 50%;
-      }
-
-      .homework-links a {
-        display: block;
-        text-align: center;
-        color: #555;
-        text-decoration: none;
-        transition: color 0.3s ease;
-      }
-
-      .homework-links a:hover {
-        color: #007bff;
-      }
-    </style>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <title>HTML/CSS 과제</title>
   </head>
   <body>
     <div class="profile-card">
@@ -87,9 +18,11 @@
         <li><a href="./src/md/markdown.md">마크다운 문법</a></li>
         <li><a href="./src/md/week1-retrospect.md">1주차 회고</a></li>
         <li style="flex-basis: 100%; height: 0"></li>
-        <!-- 줄바꿈 요소 -->
         <li><a href="./src/avatars/avatars.html">아바타</a></li>
         <li><a href="./src/md/week2-retrospect.md">2주차 회고</a></li>
+        <li style="flex-basis: 100%; height: 0"></li>
+        <li><a href="./src/login/login.html">로그인</a></li>
+        <li><a href="./src/md/week3-retrospect.md">3주차 회고</a></li>
       </ul>
     </div>
   </body>
