--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <li style="flex-basis: 100%; height: 0"></li>
         <li><a href="./src/login/login.html">로그인</a></li>
         <li><a href="./src/md/week3-retrospect.md">3주차 회고</a></li>
+        <li><a href="./src/apple/apple.html">애플</a></li>
+        <li><a href="./src/md/week4-retrospect.md">4주차 회고</a></li>
       </ul>
     </div>
   </body>
